RWA-4504: Workflow codesmells (#898)
* Workflow codesmells pt1

* Further codesmells included

* adding missed requiredMode

* shortened RequiredMode by importing schema.requiredmode

* reverted accidental newline